# blaze

./: .gitattributes  Cargo.toml  Dioxus.toml  README.md  build.rs
assets/: main.css  tailwind.css
src/: main.rs
src/components/: mod.rs  terminal.rs
src/terminal/: components.rs  mod.rs  state.rs  utils.rs
src/terminal/commands/: mod.rs  web.rs
src/terminal/commands/desktop/: fs.rs  mod.rs  process.rs
src/views/: commands.rs  demo.rs  download.rs  home.rs  mod.rs  not_found.rs
