[package]
name = "blaze"
version = "0.1.0"
authors = ["Yassen717 <EngYassenIbrahim@gmail.com>"]
edition = "2021"
description = "A blazingly fast terminal emulator built with Rust"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["process", "io-util", "sync", "rt"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
